• Fixes CSS styling - modal in mobile landscape mode is no longer cut off

--- a/portfolio-v2/src/utils/modal/Modal.css
+++ b/portfolio-v2/src/utils/modal/Modal.css
@@ -3,14 +3,13 @@
 /* .modal-backdrop */
 
 .modal-backdrop {
-  overflow-y: scroll;
-  z-index: 5;
+  background-color: rgba(0, 0, 0, 0.466);
+  width: 100%;
+  height: 100%;
   position: fixed;
   top: 0;
-  bottom: 0;
-  right: 0;
-  left: 0;
-  background-color: rgba(0, 0, 0, 0.466);
+  z-index: 50;
+  overflow-y: scroll;
 }
 
 /* .modal */
@@ -149,7 +148,13 @@
 @media (min-width: 751px) {
   .modal {
     width: 650px;
-    margin-left: -325px;
+    position: absolute;
+    z-index: 100000;
+    background: #1f2436;
+    margin: 0 auto;
+    right: 0;
+    left: 0;
+    top: 10%;
   }
 
   .modal-mobile {
